--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "framer-motion": "^12.22.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
